Implemented monthly statement spec
